# ios-cmake

./: HOWTO.txt  HowTo.md  ProjectHome.md
samples/hello-app/: HelloAppAppDelegate.h  HelloAppAppDelegate.m  main.m
samples/hello-lib/: CMakeLists.txt
toolchain/: iOS.cmake
